# click-didyoumean

./: .gitignore  .travis.yml  README.rst  pyproject.toml  setup.py  tox.ini
.github/workflows/: cicd.yml
click_didyoumean/: __init__.py
examples/: naval.py
src/click_didyoumean/: __init__.py
tests/: test_core.py
