[tool.poetry]
name = "click-didyoumean"
version = "0.3.1"
description = "Enables git-like *did-you-mean* feature in click"
authors = ["Timo Furrer <timo.furrer@roche.com>"]
license = "MIT"
homepage = "https://github.com/click-contrib/click-didyoumean"
repository = "https://github.com/click-contrib/click-didyoumean"
readme = "README.rst"

[tool.poetry.dependencies]
python = ">=3.8"
click = ">=7"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
mypy = "^0.910"
ruff = "0.3.4"

[tool.ruff]
src = ["src"]
target-version = "py38"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["ANN101", "COM812", "D", "FA", "ISC001"]

[tool.ruff.lint.flake8-type-checking]
strict = true

[tool.ruff.lint.per-file-ignores]
"examples/**" = ["ANN", "D", "INP001"]
"tests/**" = ["ANN", "D", "INP001", "S101"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
